# AutomaticTesting

./: .gitmodules  1.xml  README.txt  circle.yml
.circleci/: config.yml  configBkp.ymlBkp  configBkp2.ymlBkp2
module1/: CMakeLists.txt
module1/doc/: AutomatedTesting.odp  AutomatedTesting2.odp  AutomaticTestingForCustomer.odp
module1/module1/: CMakeLists.txt  doxygenconf
module1/module1/doc/: modue1_classDiagram.mdj  modue1_sequenceDiagram.mdj
module1/module1/include/: dumy_include.hpp
module1/module1/public/: smsDevice.hpp  smsPlanner.hpp  smsSender.hpp  timeKeeper.hpp
module1/module1/source/: smsDevice.cpp  smsPlanner.cpp  smsSender.cpp  timeKeeper.cpp
module1/module1_tests/: CMakeLists.txt
module1/module1_tests/include/: coutRedirect.hpp  smsDevice_mock.hpp  smsSender_mock.hpp
module1/module1_tests/source/: smsDevice_test1.cpp  smsPlanner_test1.cpp  smsSender_test1.cpp  timeKeeper_test1.cpp
module1/module1_tests2/: CMakeLists.txt
module1/module1_tests2/include/: smsSender_mock.hpp  timeKeeper_mock.hpp
module1/module1_tests2/source/: main.cpp  smsDevice_test2.cpp  smsPlanner_test2.cpp  smsSender_test2.cpp  timeKeeper_test2.cpp
module1/module1_tests_diagrams/smsDevice/: deInitialize.mdj  initialize.mdj  sendSmsWithDeinit.mdj  sendSmsWithInit.mdj  sendSmsWithoutInit.mdj
module1/module1_tests_diagrams/smsPlanner/: smsPlanner.mdj  smsPlanner_addDeliveryRetDiffId.mdj  smsPlanner_addDeliveryretDiffId.mdj  smsPlanner_cancelDeliveries.mdj  smsPlanner_nonValidTimeFalse.mdj  smsPlanner_notCancelAfterSend.mdj  smsPlanner_notSendCanceled.mdj  smsPlanner_notSendTwoTimes.mdj  smsPlanner_sendAllFail.mdj  smsPlanner_sendAllSuccess.mdj
module1/module1_tests_diagrams/smsSender/: sendValidatedSmsDeinitError.mdj  sendValidatedSmsInitError.mdj  sendValidatedSmsSendError.mdj  sendValidatesSms.mdj
module1/module1_tests_diagrams/timeKeeper/: timeInvalid.mdj  timeValidated.mdj
module1/module2/: CMakeLists.txt
module1/module2/doc/: README.txt  classDiagram.mdj  componentDiagram1.mdj  componentDiagram2.mdj  componentDiagram3.mdj  componentDiagram4.mdj  sequenceDiagram1.mdj
module1/module2/include/: connectionChecker.hpp
module1/module2/public/: mailDevice.hpp  mailPlanner.hpp  mailSender.hpp
module1/module2/source/: connectionChecker.cpp  mailDevice.cpp  mailPlanner.cpp  mailSender.cpp  main.cpp
module1/module2_tests/: CMakeLists.txt
module1/module2_tests/include/: connectionChecker_mock.hpp  mailDevice_mock.hpp  mailSender_mock.hpp
module1/module2_tests/source/: connectionChecker_test1.cpp  mailDevice_test1.cpp  mailPlanner_test1.cpp  mailSender_test1.cpp
module1/tests_helper/: CMakeLists.txt
module1/tests_helper/public/: coutRedirect.hpp
module1/tests_helper/source/: coutRedirect.cpp
